# PolarH10

./: LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt  scan_ble.py  setup.py  todo list.txt
src/: main.py
src/polar_h10/: __init__.py  data_logger.py  data_quality.py  ecg_handler.py  polar_device.py  visualization.py
src/polar_h10_monitor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_main.py
tests/polar_h10/: test_data_logger.py  test_data_quality.py  test_ecg_handler.py  test_ecg_visualization.py  test_polar_device.py  test_visualization.py
